--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/YouKnow74/StadiumSpotter-BE#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
