--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "stadiumspotter-be",
+  "name": "musicboxbe",
   "version": "1.0.0",
-  "description": "Back end code for StadiumSpotter application",
+  "description": "Back end code for Music Box application",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YouKnow74/StadiumSpotter-BE.git"
+    "url": "https://github.com/Rajiah123/Music-Box-BE.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/YouKnow74/StadiumSpotter-BE/issues"
+    "url": "https://github.com/Rajiah123/Music-Box-BE.git"
   },
-  "homepage": "https://github.com/YouKnow74/StadiumSpotter-BE#readme",
+  "homepage": "https://github.com/Rajiah123/Music-Box-BE.git",
   "dependencies": {
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
@@ -24,7 +24,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1"
   }
 }
